<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".Home" >
    
    <Button
            android:id="@+id/add_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_hours_string"
            android:onClick="addHoursButtonClick" />
    
    <Button
            android:id="@+id/add_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_job_string"
            android:onClick="addJobButtonClick" />
    
    <Button
            android:id="@+id/view_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/view_history_string"
            android:onClick="viewHistoryButtonClick" />

</LinearLayout>